--- a/css/dolphin.css
+++ b/css/dolphin.css
@@ -19,4 +19,8 @@ html {
 }
 
 /* Write your solution here */
-
+@media screen and (max-width: 1090px)  and  (min-width: 642x){
+  #dolphin {
+   rotate(0.5turn);
+  }
+}
