--- a/css/dolphin.css
+++ b/css/dolphin.css
@@ -21,6 +21,6 @@ html {
 /* Write your solution here */
 @media screen and (max-width: 1090px)  and  (min-width: 642x){
   #dolphin {
-   rotate(0.5turn);
+  transform: rotate(0.5turn);
   }
 }
