--- a/css/dolphin.css
+++ b/css/dolphin.css
@@ -19,7 +19,7 @@ html {
 }
 
 /* Write your solution here */
-@media screen and (max-width: 1090px) and (min-width: 642x) {
+@media screen and (max-width: 1090px) and (min-width: 642px) {
   #dolphin {
   transform: rotate(0.5turn);
   }
