--- a/css/dolphin.css
+++ b/css/dolphin.css
@@ -22,6 +22,6 @@ html {
 @media screen and (max-width: 1090px) and (min-width: 642px) {
   #dolphin {
   transform: rotate(0.5turn);
-  
+  top: 113px;
   }
 }
