automatically backed up by learn

--- a/css/monkey.css
+++ b/css/monkey.css
@@ -10,3 +10,9 @@ html {
 
 /* Write your solution here */
 
+@media screen and (max-width: 1170px) and (min-width: 406px) {
+  #monkey {
+  transform: rotate(1.0turn);
+  top: 113px;
+  }
+}
