automatically backed up by learn

--- a/css/monkey.css
+++ b/css/monkey.css
@@ -13,6 +13,6 @@ html {
 @media screen and (max-width: 1170px) and (min-width: 406px) {
   #monkey {
   top: 0px;
-  right: 0px;
+  left: 0px;
   }
 }
